--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,10 @@ h1,
 /*------ Hero-section -----*/
 
 /*----- sec-2 -----*/
+.sec-2 {
+    border-bottom: 1px solid #DDE1E6;
+}
+
 .h2-center,
 .center-p {
     text-align: center;
@@ -166,17 +170,78 @@ h1,
 }
 
 .plus-g {
+    margin-top: 2.5rem;
+}
+
+.p-l {
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.5rem;
+    text-align: center;
+    border: 1px solid #DDE1E6;
+    background:  var(--white);
+}
+
+.p-l > div {
+    padding: 0 0.1rem 0 0.1rem;
+}
+
+.h6-arti {
+    color: var(--dark-grey);
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 110%;
+}
+
+.p-arti {
+    color: var(--grey);
+    font-size: 0.9rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%; 
+}
+/*----- sec-2 -----*/
+
+/*------sec-3------*/
+.sec-3 > .container > .row {
     margin-top: 2rem;
 }
 
-/* .p-l:not(:first-of-type) {
-    padding-left: 4rem;
-    padding-right: 2rem;
-} */
-/*----- sec-2 -----*/
+.column-rows {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
+}
 
-/*--------sec-4--------*/
+.h2-row {
+    margin-top: 1rem;
+    color: var(--dark-grey);
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+.p-row {
+    margin-top: 0.1rem;
+    color: var(--dark-grey);
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+.center-img {
+    display: flex;
+    justify-content: center;
+    object-fit: none;
+}
+
+.img-boy {
+    width: 95%;
+}
+/*------sec-3------*/
+
+/*------sec-4------*/
 .sec-2,
+.sec-3,
 .sec-4,
 .sec-5 {
     padding: 2.5rem 0;
@@ -193,6 +258,7 @@ h1,
     justify-content: center;
     align-items: start;
     padding-left: 2rem;
+    /* display: block; */
 }
 
 .h2-sec-4,
@@ -223,9 +289,9 @@ h1,
     border: 0;
     margin-top: 4rem;
 }
+/*------sec-4------*/
 
-/*--------sec-5--------*/
-
+/*------sec-5------*/
 .flex-sec-5 {
     display: flex;
     justify-content: space-between;
@@ -280,4 +346,153 @@ h1,
 
 .sec-5 {
     padding-bottom: 0;
+}
+/*------sec-5------*/
+
+/*------footer------*/
+.footer {
+    padding: 4rem 0;
+    background: #263238;
+}
+
+.footer  > .container > div:not(:last-of-type) {
+    border-bottom:  1px solid white;
+}
+
+.top {
+    padding-bottom: 3rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.flex-input {
+    display: inline-flex;
+    justify-content: space-between;
+    gap: 1rem;
+}
+
+input[type="email"] {
+    border: 0;
+    outline: none;
+    width: 300px;
+    height: 40px;
+    padding: 0.2rem 0.5rem;
+}
+
+input[type="email"]::placeholder {
+    color: var(--grey-plsholder);
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%; 
+}
+
+.submit {
+    color: var(--white);
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 100%;
+    letter-spacing: 0.03125rem;
+    background: #FF5722;
+    padding: 0.2rem 0.5rem;
+    height: 40px;
+}
+
+input,
+.submit {
+    border-radius: 0.375rem;
+}
+
+.middel {
+    padding: 3rem 0;
+}
+
+.bottom {
+    padding-top: 3rem;
+}
+
+.h6-ftr {
+    color: var(--white);
+    font-size: 1.125rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 110%;
+}
+
+.nav-bar-ul-ftr {
+    padding-left: 0;
+}
+
+.nav-bar-ul-ftr a {
+    color: var(--white);
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 100%;
+    text-decoration: none;
+}
+
+.flex-btns-app {
+    margin-top: 1rem;
+}
+
+.mr-top {
+    margin-top: 1.5rem;
+}
+
+.flex-links {
+    margin-top: 1rem;
+    display: flex;
+    justify-content: start;
+    padding-left: 0;
+    gap: 1rem;
+}
+
+.bottom {
+    display: flex;
+    justify-content: space-between;
+}
+
+.p-email {
+    color: var(--white);
+    font-size: 0.875rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%; 
+}
+
+.nav-bar-ul-end {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.nav-bar-ul-end a {
+    text-decoration: none;
+    color: var(--white);
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 100%;
+}
+/*------footer------*/
+
+/* mobile-design */
+@media screen and (max-width: 700px) {
+    .nav-bar {
+        display: none;
+    }
+
+    .flex-sec-5 {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+    }
+
+    .top,
+    .bottom {
+        display: flex;
+        flex-direction: column;
+    }
 }
