--- a/css/style.css
+++ b/css/style.css
@@ -1,102 +1,100 @@
 /* reset */
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto';
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Roboto";
 }
 
 ul {
-    padding-left: 0;
-    list-style: none;
+  padding-left: 0;
+  list-style: none;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 button {
-    border: 0;
-    background: transparent;
+  border: 0;
+  background: transparent;
 }
 
 :root {
-    font-size: 16px;
-
-    /* colors */
-    --orenge: #FF5722;
-    --dark-grey: #21272A;
-    --white: #FFF;
-    --grey: #697077;
-    --grey-plsholder: #A4A5A7;
+  font-size: 16px;
+  /* colors */
+  --orenge: #FF5722;
+  --dark-grey: #21272A;
+  --white: #FFF;
+  --grey: #697077;
+  --grey-plsholder: #A4A5A7;
 }
 
 /* reset */
-
 /* --------header-------- */
 header {
-    padding: 1rem;
+  padding: 1rem;
 }
 
 .flex-hdr {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .nav-bar-ul {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 3rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 3rem;
 }
 
 .nav-bar-ul > li > a {
-    color: var(--dark-grey);
-    font-size: 1rem;
-    font-style: normal;
-    font-weight: 500;
-    text-decoration: none;
+  color: var(--dark-grey);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  text-decoration: none;
 }
 
 #a-active {
-    color: var(--orenge);
+  color: var(--orenge);
 }
 
 .super-menu {
-    position: relative;
+  position: relative;
 }
 
 .menu {
-    position: absolute;
-    background-color: white;
-    border-radius: 0.375rem;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    visibility: hidden;
-    opacity: 0;
-    top: 150%;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    display: block;
-    padding: 0;
+  position: absolute;
+  background-color: white;
+  border-radius: 0.375rem;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  visibility: hidden;
+  opacity: 0;
+  top: 150%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  display: block;
+  padding: 0;
 }
 
 .menu > li > a {
-    color: #000;
-    font-size: 0.6875rem;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 100%;
-    text-decoration: none;
-    padding: 0.5rem;
+  color: #000;
+  font-size: 0.6875rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%;
+  text-decoration: none;
+  padding: 0.5rem;
 }
 
 .super-menu:hover .menu {
-    visibility: visible;
-    opacity: 1;
-    top: 100%;
-    transition: all linear 0.5s;
+  visibility: visible;
+  opacity: 1;
+  top: 100%;
+  transition: all linear 0.5s;
 }
 
 /* .menu {
@@ -104,395 +102,394 @@ header {
     min-width: 100%;
     white-space: nowrap;
 } */
-
 .menu > li:not(:last-of-type) {
-    border-bottom: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
 }
 
 .ditls {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
 }
-/*----- header----- */
 
+/*----- header----- */
 /* ------ Hero-section ----- */
 .hero-sec {
-    padding: 2.5rem 0;   
+  padding: 2.5rem 0;
 }
 
 .heads-hero {
-    display: flex;
-    flex-direction: column;
-    row-gap: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.5rem;
 }
 
 h1,
 .p-hero-sec {
-    color: var(--dark-grey);
-    font-size: 3.375rem;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 110%;
+  color: var(--dark-grey);
+  font-size: 3.375rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 110%;
 }
 
 .p-hero-sec {
-    font-size: 1.125rem;
-    font-weight: 400;
-    line-height: 140%;
+  font-size: 1.125rem;
+  font-weight: 400;
+  line-height: 140%;
 }
-/*------ Hero-section -----*/
 
+/*------ Hero-section -----*/
 /*----- sec-2 -----*/
 .sec-2 {
-    border-bottom: 1px solid #DDE1E6;
+  border-bottom: 1px solid #DDE1E6;
 }
 
 .h2-center,
 .center-p {
-    text-align: center;
+  text-align: center;
 }
 
 .h2-center {
-    color: var(--dark-grey);
-    font-size: 2.625rem;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 110%;
+  color: var(--dark-grey);
+  font-size: 2.625rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 110%;
 }
 
 .center-p {
-    margin-top: 1rem;
-    font-size: 0.9rem;
-    font-weight: 400;
-    line-height: 140%;
+  margin-top: 1rem;
+  font-size: 0.9rem;
+  font-weight: 400;
+  line-height: 140%;
 }
 
 .plus-g {
-    margin-top: 2.5rem;
+  margin-top: 2.5rem;
 }
 
 .p-l {
-    display: flex;
-    flex-direction: column;
-    row-gap: 0.5rem;
-    text-align: center;
-    border: 1px solid #DDE1E6;
-    background:  var(--white);
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.5rem;
+  text-align: center;
+  border: 1px solid #DDE1E6;
+  background: var(--white);
 }
 
 .p-l > div {
-    padding: 0 0.1rem 0 0.1rem;
+  padding: 0 0.1rem 0 0.1rem;
 }
 
 .h6-arti {
-    color: var(--dark-grey);
-    font-size: 1.5rem;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 110%;
+  color: var(--dark-grey);
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 110%;
 }
 
 .p-arti {
-    color: var(--grey);
-    font-size: 0.9rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 140%; 
+  color: var(--grey);
+  font-size: 0.9rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
 }
-/*----- sec-2 -----*/
 
+/*----- sec-2 -----*/
 /*------sec-3------*/
 .sec-3 > .container > .row {
-    margin-top: 2rem;
+  margin-top: 2rem;
 }
 
 .column-rows {
-    display: flex;
-    flex-direction: column;
-    row-gap: 2rem;
+  display: flex;
+  flex-direction: column;
+  row-gap: 2rem;
 }
 
 .h2-row {
-    margin-top: 1rem;
-    color: var(--dark-grey);
-    font-size: 1.5rem;
-    font-weight: 700;
+  margin-top: 1rem;
+  color: var(--dark-grey);
+  font-size: 1.5rem;
+  font-weight: 700;
 }
 
 .p-row {
-    margin-top: 0.1rem;
-    color: var(--dark-grey);
-    font-size: 1rem;
-    font-weight: 400;
+  margin-top: 0.1rem;
+  color: var(--dark-grey);
+  font-size: 1rem;
+  font-weight: 400;
 }
 
 .center-img {
-    display: flex;
-    justify-content: center;
-    object-fit: none;
+  display: flex;
+  justify-content: center;
+  object-fit: none;
 }
 
 .img-boy {
-    width: 95%;
+  width: 95%;
 }
-/*------sec-3------*/
 
+/*------sec-3------*/
 /*------sec-4------*/
 .sec-2,
 .sec-3,
 .sec-4,
 .sec-5 {
-    padding: 2.5rem 0;
+  padding: 2.5rem 0;
 }
 
 .padding {
-    padding-left: 5rem;
+  padding-left: 5rem;
 }
 
 .headings {
-    display: flex;
-    flex-direction: column;
-    row-gap: 1rem;
-    justify-content: center;
-    align-items: start;
-    padding-left: 2rem;
-    /* display: block; */
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+  justify-content: center;
+  align-items: start;
+  padding-left: 2rem;
+  /* display: block; */
 }
 
 .h2-sec-4,
 .p-sec-4 {
-    color: #21272A;
-    font-size: 2.1rem;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 110%;
+  color: #21272A;
+  font-size: 2.1rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 110%;
 }
 
 .p-sec-4 {
-    font-size: 1rem;
-    font-weight: 700;
-    line-height: 140%;
+  font-size: 1rem;
+  font-weight: 700;
+  line-height: 140%;
 }
 
 .btn-contact {
-    color: #FFF;
-    text-align: center;
-    font-size: 1rem;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 140%;
-    border-radius: 0.375rem;
-    background: #FF5722;
-    padding: 1rem 1.5rem;
-    border: 0;
-    margin-top: 4rem;
+  color: #FFF;
+  text-align: center;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 140%;
+  border-radius: 0.375rem;
+  background: #FF5722;
+  padding: 1rem 1.5rem;
+  border: 0;
+  margin-top: 4rem;
 }
-/*------sec-4------*/
 
+/*------sec-4------*/
 /*------sec-5------*/
 .flex-sec-5 {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 5rem;
 }
 
 .headings-sec-5 {
-    display: flex;
-    flex-direction: column;
-    row-gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
 }
 
 .h2-sec-5,
 .p-sec-5 {
-    color: #21272A;
-    font-size: 3.375rem;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 110%;
+  color: #21272A;
+  font-size: 3.375rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 110%;
 }
 
 .p-sec-5 {
-    font-size: 1.125rem;
-    font-weight: 400;
-    line-height: 140%;
+  font-size: 1.125rem;
+  font-weight: 400;
+  line-height: 140%;
 }
 
 .flex-btns {
-    display: flex;
-    gap: 1rem;
-    margin-top: 4rem;
+  display: flex;
+  gap: 1rem;
+  margin-top: 4rem;
 }
 
 .start {
-    color: #FF5722;
-    font-size: 1.25rem;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 100%;
-    letter-spacing: 0.03125rem;
-    padding: 1rem;
-    border-radius: 0.375rem;
-    border: 2px solid #FF5722;
-    background-color: white;
+  color: #FF5722;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%;
+  letter-spacing: 0.03125rem;
+  padding: 1rem;
+  border-radius: 0.375rem;
+  border: 2px solid #FF5722;
+  background-color: white;
 }
 
 .active {
-    background: #FF5722;
-    color: #fff;
+  background: #FF5722;
+  color: #fff;
 }
 
 .sec-5 {
-    padding-bottom: 0;
+  padding-bottom: 0;
 }
-/*------sec-5------*/
 
+/*------sec-5------*/
 /*------footer------*/
 .footer {
-    padding: 4rem 0;
-    background: #263238;
+  padding: 4rem 0;
+  background: #263238;
 }
 
-.footer  > .container > div:not(:last-of-type) {
-    border-bottom:  1px solid white;
+.footer > .container > div:not(:last-of-type) {
+  border-bottom: 1px solid white;
 }
 
 .top {
-    padding-bottom: 3rem;
-    display: flex;
-    justify-content: space-between;
+  padding-bottom: 3rem;
+  display: flex;
+  justify-content: space-between;
 }
 
 .flex-input {
-    display: inline-flex;
-    justify-content: space-between;
-    gap: 1rem;
+  display: inline-flex;
+  justify-content: space-between;
+  gap: 1rem;
 }
 
-input[type="email"] {
-    border: 0;
-    outline: none;
-    width: 300px;
-    height: 40px;
-    padding: 0.2rem 0.5rem;
+input[type=email] {
+  border: 0;
+  outline: none;
+  width: 300px;
+  height: 40px;
+  padding: 0.2rem 0.5rem;
 }
 
-input[type="email"]::placeholder {
-    color: var(--grey-plsholder);
-    font-size: 1rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 140%; 
+input[type=email]::placeholder {
+  color: var(--grey-plsholder);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
 }
 
 .submit {
-    color: var(--white);
-    font-size: 1rem;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 100%;
-    letter-spacing: 0.03125rem;
-    background: #FF5722;
-    padding: 0.2rem 0.5rem;
-    height: 40px;
+  color: var(--white);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%;
+  letter-spacing: 0.03125rem;
+  background: #FF5722;
+  padding: 0.2rem 0.5rem;
+  height: 40px;
 }
 
 input,
 .submit {
-    border-radius: 0.375rem;
+  border-radius: 0.375rem;
 }
 
 .middel {
-    padding: 3rem 0;
+  padding: 3rem 0;
 }
 
 .bottom {
-    padding-top: 3rem;
+  padding-top: 3rem;
 }
 
 .h6-ftr {
-    color: var(--white);
-    font-size: 1.125rem;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 110%;
+  color: var(--white);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 110%;
 }
 
 .nav-bar-ul-ftr {
-    padding-left: 0;
+  padding-left: 0;
 }
 
 .nav-bar-ul-ftr a {
-    color: var(--white);
-    font-size: 1rem;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 100%;
-    text-decoration: none;
+  color: var(--white);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%;
+  text-decoration: none;
 }
 
 .flex-btns-app {
-    margin-top: 1rem;
+  margin-top: 1rem;
 }
 
 .mr-top {
-    margin-top: 1.5rem;
+  margin-top: 1.5rem;
 }
 
 .flex-links {
-    margin-top: 1rem;
-    display: flex;
-    justify-content: start;
-    padding-left: 0;
-    gap: 1rem;
+  margin-top: 1rem;
+  display: flex;
+  justify-content: start;
+  padding-left: 0;
+  gap: 1rem;
 }
 
 .bottom {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .p-email {
-    color: var(--white);
-    font-size: 0.875rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 140%; 
+  color: var(--white);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
 }
 
 .nav-bar-ul-end {
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
 }
 
 .nav-bar-ul-end a {
-    text-decoration: none;
-    color: var(--white);
-    font-size: 1rem;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 100%;
+  text-decoration: none;
+  color: var(--white);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%;
 }
-/*------footer------*/
 
+/*------footer------*/
 /* mobile-design */
 @media screen and (max-width: 700px) {
-    .nav-bar {
-        display: none;
-    }
-
-    .flex-sec-5 {
-        display: flex;
-        flex-direction: column-reverse;
-        justify-content: center;
-    }
-
-    .top,
-    .bottom {
-        display: flex;
-        flex-direction: column;
-    }
+  .nav-bar {
+    display: none;
+  }
+  .flex-sec-5 {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+  }
+  .top,
+  .bottom {
+    display: flex;
+    flex-direction: column;
+  }
 }
+
+/*# sourceMappingURL=style.css.map */
